<resources>
    <string name="app_name">LightApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tagLine">Every Student\'s Companion</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="str_home">Home</string>
    <string name="str_news">News Today</string>
    <string name="str_articles">Articles</string>
    <string name="str_dict">Dictionary</string>
    <string name="str_games">Games</string>
    <string name="str_notify">Remind Me</string>
    <string name="str_school">School</string>
    <string name="str_askme">Ask Me</string>
    <string name="str_grievances">Grievances</string>
    <string name="str_profile">Profile</string>
    <string name="str_help">Help</string>
    <string name="str_settings">Settings</string>
    <string name="str_feed">Feedback</string>
    <string name="str_logout">Logout</string>

    <string name="rollno">Roll Number</string>
    <string name="password">Password</string>
    <string name="login_text">LogIn</string>
    <string name="keepme">Keep me logged in</string>
    <string name="register">Register</string>
    <string name="LOGGEDIN">com.example.holys.light.LOGGEDIN</string>
    <string name="pub">Published: </string>
    <string name="buttonText">Tap to load More News</string>

    <string name="refreshing">Swipe down to refresh</string>

    <string name="firstString">Setting up for you</string>
    <string name="light_meaning">The sensation of perceiving light; brightness</string>
    <string name="light_word"><u>light</u></string>
    <string name="edit_text_hint">Search Word</string>

    <string name="light_speech"><i>noun</i></string>
    <string name="light_def_header">Definition:</string>
    <string name="light_ex_header">Example:</string>
    <string name="light_example">A sudden light that made me blink.\n\n
    Turn out the lights when you leave</string>
    <string name="light_rela_header">Related Words:</string>
    <string name="light_related_text">enlightenment,\tknowledge,\tprosperity,\tday,\tskylight</string>
    <string name="word_day">Word of The Day</string>
    <string name="light_source">Come from another planet</string>
    <string name="light_def_2">A source of light, especially a lamp, a lantern, or an electric lighting fixture</string>
    <string name="action_share">Share</string>
    <string name="title_activity_details_dictionary">DetailsDictionary</string>

    <string name="browser_title">Light-Browser</string>
    <string name="dictionary_title">Light-Dictionary</string>
    <string name="recent_title">Recent Searches</string>

    <string-array name="spinner_other">
        <item>Means-Like</item>
        <item>Sounds-Like</item>
        <item>Spelt-Like</item>
        <item>Synonyms</item>
        <item>Antonyms</item>
        <item>Hypernyms</item>
        <item>Hyponyms</item>
        <item>Holonyms</item>
        <item>Meronyms</item>
        <item>Perfect Rhymes</item>
        <item>Approximate Rhymes</item>
        <item>Homophones</item>
    </string-array>
    <string-array name="spinner_explain">
        <item>meaning is related</item>
        <item>pronounced in the same way</item>
        <item>spelt in the same way</item>
        <item>Similar in meaning</item>
        <item>Opposite in meaning</item>
        <item>kind of</item>
        <item>more general than</item>
        <item>comprises</item>
        <item>part of</item>
        <item>rhymes perfectly with</item>
        <item>rhymes partially with</item>
        <item>sound alike words</item>

    </string-array>

    <string name="ok">Search</string>
    <string name="cancel">Cancel</string>
</resources>
